[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "killbill-xml-builder"
version = "0.0.9"
authors = [
  { name="Raul Cobiellas", email="raulodev@gmail.com" },
]
description = "killbill xml builder"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["killbill", "kill", "bill" , "xml"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/raulodev/killbill-xml-builder"
Issues = "https://github.com/raulodev/killbill-xml-builder/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/killbill_xml_builder"]